fix: java version thingy